--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 .DS_Store
-/.build
-/Packages
-xcuserdata/
-DerivedData/
+.netrc
 .swiftpm/configuration/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
-.netrc
-lcov.info
+/.build
+/.index-build/
+/Packages
+DerivedData/
 Package.resolved
 Sources/Data/Day*.txt
+lcov.info
+xcuserdata/
